test/fail/where-request.grace
method name<T> where Object <: T {}

name<type { a }>
